--- a/projects/jumystap/style.css
+++ b/projects/jumystap/style.css
@@ -1,14 +1,20 @@
-/* body {
-  display: flex;
-  flex-direction: column;
-} */
+body {
+  /* display: flex;
+  flex-direction: column; */
+
+  background-color: rgba(241, 241, 241, 1);
+}
+
+html {
+  background-color: rgba(241, 241, 241, 1);
+}
 
 .header {
   display: flex;
+  flex-direction: row;
   height: 62px;
   padding: 12px 80px;
   gap: 748px;
-  border-bottom: 1px solid black;
 }
 
 .header-logo {
@@ -37,7 +43,7 @@
   /* font-family: ; */
 }
 
-.menu {
+.header-menu {
   display: flex;
   flex-direction: row;
   width: 410px;
@@ -52,16 +58,18 @@
   text-align: center;
 }
 
+/* ______________________________________ */
+
 .description-page {
   display: grid;
   grid-template-columns: 1fr 1fr;
   height: 620px;
-  background-color: aqua;
   padding: 100px 80px;
   gap: 165px;
 }
 
 .desc-info {
+  display: grid;
   height: 495px;
   width: 366px;
   gap: 48px;
@@ -76,4 +84,162 @@
   width: 619px;
   height: 420px;
   border-radius: 32px;
+}
+
+.ditext {
+  width: 495px;
+  gap: 32px;
+  height: 268px;
+}
+
+.ditext-title {
+  font-size: 52px;
+  font-weight: 700;
+}
+
+.ditext-description {
+  font-weight: 500;
+  font-size: 17px;
+}
+
+.hitworks-btn {
+  color: white;
+  background-color: rgba(113, 47, 255, 1);
+  height: 50px;
+  width: 144px;
+  border-radius: 100px;
+  border-color: rgba(113, 47, 255, 1);
+  padding: 16px 24px;
+  gap: 10px;
+
+  font-weight: 500;
+  font-size: 14px;
+  text-align: center;
+}
+
+/* ______________________________________ */
+
+.hitworks-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 562px;
+  background-color: rgba(225, 222, 231, 1);
+  border-radius: 32px;
+  padding: 100px 80px;
+  gap: 86px;
+}
+
+.hitworks-page-info {
+  /* width: 351px; */
+  height: 84px;
+  gap: 64px;
+}
+.hitwtext {
+  text-align: center;
+}
+
+.hitwt-description {
+  /* width: 169px; */
+  height: 16px;
+  font-size: 16px;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 1);
+}
+.hitwt-title {
+  /* width: 351px; */
+  height: 56px;
+  font-weight: 700;
+  font-size: 54px;
+  color: rgba(0, 0, 0, 1);
+}
+
+/*  */
+
+.frame {
+  display: flex;
+  flex-direction: row;
+  height: 186px;
+  width: 1280px;
+  gap: 40px;
+}
+
+.info {
+  width: 400px;
+  height: 186px;
+  gap: 48px;
+}
+
+.info-img {
+  width: 48.57px;
+  height: 64px;
+  left: 8px;
+}
+.frame-text {
+  margin: 20px 0px;
+  width: 400px;
+  height: 74px;
+  gap: 24px;
+}
+
+.frame-text-title {
+  font-weight: 700;
+  font-size: 24px;
+  color: rgba(0, 0, 0, 1);
+}
+.frame-text-desc {
+  font-size: 16px;
+  font-weight: 500;
+  color: rgba(0, 0, 0, 1);
+}
+
+/* ______________________________________ */
+
+.input-field-block {
+  height: 422px px;
+  padding: 100px 80px;
+  gap: 128px;
+}
+
+.ifb-info {
+  width: 757px;
+  height: 222px;
+  gap: 48px;
+}
+
+.ifbi-title {
+  width: 495px;
+  height: 64px;
+
+  /* font-family: Kanit; */
+  font-size: 54px;
+  font-weight: 700;
+  line-height: 64px;
+  color: rgba(0, 0, 0, 1);
+}
+.ifbi-description {
+  width: 480px;
+  height: 64px;
+  /* font-family: Inter; */
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 22px;
+  color: rgba(0, 0, 0, 1);
+}
+
+.container-f {
+  width: 757px;
+  height: 50px;
+  gap: 32px;
+}
+
+.form-control {
+  width: 619px;
+  height: 50px;
+  padding: 13px 75px;
+  border-radius: 12px;
+}
+
+.form {
+  border-radius: 12px;
 }
