--- a/projects/jumystap_flexible/style.css
+++ b/projects/jumystap_flexible/style.css
@@ -56,10 +56,10 @@ header {
 }
 
 .first-img {
-  width: 1300px;
+  width: 1200px;
   height: 850px;
   border-radius: 52px;
-  margin: 20px;
+  margin: 1.25rem;
 }
 
 .first-div {
@@ -68,11 +68,12 @@ header {
 }
 /* _______________________________ */
 .second {
-  height: 562px;
+  height: 1000px;
+  border-radius: 32px;
   background-color: rgba(225, 222, 231, 1);
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   text-align: center;
 }
 
@@ -81,25 +82,38 @@ header {
   flex-direction: row;
   justify-content: space-around;
   gap: 40px;
+  text-align: start;
+}
+
+.second-title {
+  margin: 6.25rem;
 }
 
 .images {
-  width: 64px;
-  margin: 18px;
+  width: 80px;
+  margin: 1.2rem;
 }
 
 .item {
   display: flex;
   flex-direction: column;
-  align-items:start;
+  align-items: start;
   gap: 48px;
   width: 400px;
   height: 186px;
 }
 
 /* _______________________________ */
+.third {
+  padding: 100px 150px;
+}
 .third-1-content {
   display: flex;
+  margin: 2.5rem 0;
+}
+
+.third-1-1 {
+  width: 1700px;
 }
 
 /* _______________________________
@@ -114,15 +128,43 @@ header {
  */
 
 footer {
-  /* display: flex;
-  flex-direction: column; */
+  display: flex;
+  flex-direction: column;
 }
 
 .footer {
   display: grid;
-  grid-template-columns: 2fr 2fr 2fr 1fr 1fr 6fr;
+  grid-template-columns: 5fr 7fr;
+  background-color: rgba(255, 255, 255, 1);
+  height: 250px;
+  border-top-left-radius: 32px;
+  border-top-right-radius: 32px;
+  text-align: center;
+  
 }
 
+.footer-left {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  gap: 50px;
+  margin: 3rem 10rem;
+}
+
+.footer-text {
+  
+}
+
+.btn-f {
+  border: 0px;
+  background-color: rgba(255, 255, 255, 1);
+}
+
+.btn-f-text {
+  font-size: 28px;
+  font-weight: 500;
+}
 .madeby {
   display: flex;
   flex-direction: row;
@@ -143,5 +185,6 @@ footer {
 .inter {
   font-family: 'Inter', serif;
   font-style: normal;
-  margin: 4px 15px;
+  font-weight: 500;
+  margin: 0.25rem 0.9rem;
 }
